# rust-workshop

./: .editorconfig  .env.tmpl  .envrc  .gitignore  .gitmodules  .prettierrc  Cargo.toml  README.md  justfile  rust-toolchain.toml  rustfmt.toml  shell.nix  vendir.lock.yml
.cargo/: .gitignore
.devcontainer/: devcontainer.json  devcontainer1.json
.devcontainer/scripts/: on-create-command.sh
.nvim/: nvim-dap.lua  nvim.lua
docs/: setup.md
docs/annoucments/: workshop-25.md
docs/announcments/: workshop-25.md
exercises/basic-syntax/: Cargo.toml  README.md
exercises/binary-tree/: Cargo.toml  README.md
exercises/blanket-implementation/: Cargo.toml  README.md
exercises/boxed-data/: README.md
exercises/boxed-data/src/: main.rs
exercises/closures/: Cargo.toml  README.md
exercises/composite-types/: Cargo.toml  README.md
exercises/config-reader/: Cargo.toml  README.md
exercises/config-reader/src/: main.rs
exercises/drop-with-errors/: Cargo.toml  README.md
exercises/error-handling/src/: main.rs
exercises/error-propagation/src/: main.rs
exercises/extension-traits/: Cargo.toml
exercises/generics/: Cargo.toml  README.md
exercises/lifetimes/: Cargo.toml  README.md
exercises/local-storage-vec/: README.md
exercises/move-semantics/: Cargo.toml  README.md
exercises/options/: Cargo.toml  README.md
exercises/proc-macros/: Cargo.toml  README.md
exercises/setup/: Cargo.toml  README.md
exercises/slices/: README.md
exercises/std-traits/: Cargo.toml  README.md
src/content/: package.json  rust-for-python.toml
tools/nix/: Cargo.toml  flake.nix
(+13 files in other folders)
