[workspace]
members = [
   "exercises/setup",
   "exercises/basic-syntax",
   "exercises/move-semantics",
   "exercises/error-handling",
   "exercises/error-propagation",
   "exercises/slices",
   "exercises/ring-buffer",
   "exercises/boxed-data",
   "exercises/config-reader",
   "exercises/binary-tree",
   "exercises/local-storage-vec",
   "exercises/generics",
   "exercises/lifetimes",
   "exercises/borrowing",
   "exercises/composite-types",
]

resolver = "2"
