[workspace]
members = [
   "excercise/options"
   "exercises/basic-syntax",
   "exercises/binary-tree",
   "exercises/borrowing",
   "exercises/boxed-data",
   "exercises/composite-types",
   "exercises/config-reader",
   "exercises/error-handling",
   "exercises/error-propagation",
   "exercises/extension-traits",
   "exercises/generics",
   "exercises/lifetimes",
   "exercises/local-storage-vec",
   "exercises/move-semantics",
   "exercises/options",
   "exercises/ring-buffer",
   "exercises/setup",
   "exercises/slices",
]

resolver = "2"
